stage2/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: local-registry
  annotations:
    nginx.org/mergeable-ingress-type: minion
spec:
  ingressClassName: nginx
  tls: []
  rules:
    - host: lab0.local
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
